Reorganization. Just needs the glue between GUI and backend.